# py-insta-scraper

./: .gitignore  README.md  pyproject.toml
src/: core.py
src/config/: config.py  sample_config.toml
src/run/: __init__.py  core.py
src/utils/: endpoints.py
